--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ API_SUBTYPE=lumenapi
 API_DOMAIN=api.lumen.local
 API_VERSION=v1
 API_DEBUG=true
+
+#JWT
+JWT_SECRET=4297f44b13955235245b2497399d7a93
+JWT_TTL=10
